Moved recipes link above

--- a/css/site.css
+++ b/css/site.css
@@ -34,8 +34,7 @@ header p {
 }
 
 .address {
-  /* max-width: 100%; */
-  display: inline-block;
+  max-width: 100%;
   padding: 0;
 }
 
@@ -71,4 +70,8 @@ header p {
 
 .marker {
   width: 30px
+}
+
+.about-us > div {
+  padding: 0;
 }
